[tool.poetry]
name = "aio_sqlakeyset"
version = "1.2.1"
authors = [ "Robert Lechte <robertlechte@gmail.com>",]
license = "Unlicense"
description = "offset-free paging for sqlalchemy"


[tool.poetry.dependencies]
python = ">=3.7"
sqlalchemy = ">=1.3.11"
python-dateutil = "*"
packaging = ">=20.0"

[tool.poetry.dev-dependencies]
sqlbag = "git+https://github.com/djrobstep/sqlbag.git@f4759318710ef33dc041710a6ff38f03d3c39b56"
pytest = "*"
pytest-cov = "*"
pytest-clarity = ">=0.3.0-alpha.0"
psycopg2-binary = "*"
pymysql = "*"
flake8 = "*"
isort = "*"
pytz = "*"
black = { version = ">=19.10b0", python=">=3.6" }
sqlalchemy_utils = "*"
arrow = "*"
sqlalchemy2-stubs = "^0.0.2-alpha.24"
pyright = "1.1.262"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 88

[tool.pytest.ini_options]
filterwarnings = "ignore:.*cache_ok.*:::"
