[tool.poetry]
name = "aio_sqlakeyset"
version = "1.2.1"
authors = [ "Robert Lechte <robertlechte@gmail.com>",]
license = "Unlicense"
description = "offset-free paging for sqlalchemy"
packages = [
    { include = "aio_sqlakeyset" },
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.7 <4.0"
sqlalchemy = ">=1.4"
python-dateutil = "*"

[tool.poetry.dev-dependencies]
sqlbag = "*"
packaging = ">=20.0"
pytest = "*"
pytest-cov = "*"
pytest-clarity = "*"
psycopg2-binary = "*"
pymysql = "*"
flake8 = "*"
isort = "*"
pytz = "*"
black = "*"
sqlalchemy_utils = "*"
arrow = "*"
sqlalchemy2-stubs = "^0.0.2-alpha.24"
pyright = "1.1.262"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 88

[tool.pytest.ini_options]
filterwarnings = "ignore:.*cache_ok.*:::"
